fix(deps): update geopackage to v6